**JEP:** https://openjdk.org/jeps/445